fix: remove canciones.txt persistence and add inactivity watchdog